fix and/or alignment in IE11
overflow hidden

--- a/Website/SourceCode/Profiles/Profiles/Search/CSS/UCSF.css
+++ b/Website/SourceCode/Profiles/Profiles/Search/CSS/UCSF.css
@@ -35,8 +35,7 @@ input#chkExactphrase, input#institutionallexcept, input#departmentallexcept { di
 }
 #why { width:190px; font-size:11px; padding:1px; text-align:center; background-color:#F2F7F7; margin-left:30px }
  
-/* #andor { width: 100%; height: 3px\9; margin-top: -25px; } */
 #andor span { display: inline-block; position: relative; left: 150px; top: -25px;
-  width: 46px; height: 15px; margin-bottom: -15px;
+  width: 46px; height: 15px; margin-bottom: -15px; overflow: hidden;
   color: #666; background-color: #EEE; padding: 0 0 0 6px; font-size: 11px; letter-spacing: 2px; }
 
